--- a/public/css/app.css
+++ b/public/css/app.css
@@ -120,9 +120,9 @@ main .jumbotron {
 }
 
 main .comic-center {
-  height: 520px;
   background-color: #1c1c1c;
   position: relative;
+  padding-bottom: 50px;
 }
 
 main .container .title {
@@ -133,9 +133,183 @@ main .container .title {
   top: -25px;
 }
 
+main .container .load {
+  background-color: #0282f9;
+  text-align: center;
+  position: absolute;
+  color: white;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+main .container .load h2 {
+  padding: 10px 50px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
 main .container .title h2 {
   color: white;
   text-transform: uppercase;
   padding: 10px;
   font-weight: 900;
+}
+
+main .container .box-fumetti {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 50px;
+}
+
+.box-fumetti .fumetto {
+  flex-basis: 16.6666666667%;
+  min-width: 150px;
+  padding: 10px;
+}
+
+.box-fumetti .fumetto .cover {
+  height: 55%;
+  overflow-y: hidden;
+  margin-bottom: 10px;
+}
+
+.box-fumetti .fumetto .cover img {
+  width: 100%;
+}
+
+.box-fumetti .fumetto a {
+  color: white;
+  font-size: 16px;
+}
+
+.comic-bottom {
+  height: 120px;
+  background-color: #0282f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comic-bottom ul {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.comic-bottom li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  font-size: 13px;
+}
+
+.comic-bottom img {
+  width: 35px;
+  margin: 10px;
+}
+
+.footer-top {
+  width: 100%;
+  height: 350px;
+  background-image: url("../img/footer-bg.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.footer-top .container {
+  display: flex;
+  align-items: center;
+}
+
+.footer-top .ft-left {
+  float: left;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.footer-top nav {
+  max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.footer-top nav ul {
+  list-style: none;
+}
+
+.footer-top h4 {
+  color: white;
+  text-transform: uppercase;
+  margin: 7px 0;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.footer-top li a {
+  color: #686868;
+  text-decoration: none;
+  font-size: 10px;
+}
+
+.ft-right {
+  float: left;
+  width: 50%;
+}
+
+.ft-right img {
+  width: 100%;
+}
+
+.footer-bottom {
+  width: 100%;
+  height: 90px;
+  background-color: #303030;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-bottom .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-bottom .btn {
+  text-align: center;
+  color: white;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: 2px solid #0282f9;
+  padding: 10px;
+  cursor: pointer;
+  width: 150px;
+}
+
+.footer-bottom .social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-bottom h4 {
+  color: #0282f9;
+  text-transform: uppercase;
+  margin: 10px;
+}
+
+.footer-bottom img {
+  margin: 5px;
+  cursor: pointer;
 }
